[gd_scene load_steps=5 format=1]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/MediaFolderSelectScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui/ImportProgressScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://themes/Default.tres" type="Theme" id=4]

[node name="Main" type="Node"]

script/script = ExtResource( 1 )

[node name="MediaFolderSelectScreen" parent="." instance=ExtResource( 2 )]

[node name="ImportProgressScreen" parent="." instance=ExtResource( 3 )]

visibility/visible = false

[node name="ErrorDialog" type="AcceptDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 4 )
margin/left = 20.0
margin/top = 40.0
margin/right = 1010.0
margin/bottom = 580.0
popup/exclusive = false
window/title = "Error"
dialog/hide_on_ok = true

[connection signal="begin_step" from="." to="." method="_on_Main_begin_step"]

[connection signal="end_step" from="." to="." method="_on_Main_end_step"]

[connection signal="import_complete" from="." to="." method="_on_Main_import_complete"]

[connection signal="next" from="MediaFolderSelectScreen" to="." method="_on_MediaFolderSelectScreen_next"]


